Closed
Bug 1046003
Opened 11 years ago
Closed 11 years ago
seeking within an ogv partially gives black frames/flickering
Categories
(Core :: Audio/Video, defect)
Tracking
()
VERIFIED
FIXED
mozilla34
People
(Reporter: xtc4uall, Assigned: cpearce)
References
()
Details
(Keywords: regression, testcase)
Attachments
(3 files)
|
259 bytes,
text/html
|
Details | |
|
4.77 KB,
patch
|
kinetik
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
5.63 KB,
patch
|
RyanVM
:
feedback+
|
Details | Diff | Splinter Review |
STR:
* open given URL
* seek around in the last third
-> notice the flickering/black frames
Last good revision: 1417d180a1d8 (2014-04-01)
First bad revision: 4941a2ac0786 (2014-04-02)
Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=1417d180a1d8&tochange=4941a2ac0786
Last good revision: b22e89d7944f
First bad revision: 9c0afbe41ce8
Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=b22e89d7944f&tochange=9c0afbe41ce8
=> regressed by Bug 778077
| Reporter | ||
Updated•11 years ago
|
status-firefox31:
--- → affected
status-firefox32:
--- → affected
status-firefox33:
--- → affected
status-firefox34:
--- → affected
tracking-firefox32:
--- → ?
tracking-firefox33:
--- → ?
tracking-firefox34:
--- → ?
| Assignee | ||
Comment 2•11 years ago
|
||
This testcase should show load a video, seek, and render a frame. The frame doesn't render in Firefox 31.
Assignee: nobody → cpearce
Status: NEW → ASSIGNED
Flags: needinfo?(cpearce)
| Assignee | ||
Comment 3•11 years ago
|
||
The problem is that we're hitting a run of duplicate frames in the file, and the seek is terminating on a duplicate. Duplicates don't have an image, so we can't paint it.
Fix is simple; when we encounter a duplicate in MediaDecoderStateMachine::DropVideoUpToSeekTarget, we copy forward the Image from the previous frame, and stash that frame if we drop, so that we can repeat the process if the next frame is also a duplicate.
Attachment #8468761 -
Flags: review?(kinetik)
| Assignee | ||
Comment 4•11 years ago
|
||
We should uplift this to beta. I don't think it's worth chemspilling for this.
Updated•11 years ago
|
Attachment #8468761 -
Flags: review?(kinetik) → review+
| Assignee | ||
Comment 5•11 years ago
|
||
| Reporter | ||
Comment 6•11 years ago
|
||
(In reply to Chris Pearce (:cpearce) from comment #5)
> https://hg.mozilla.org/integration/mozilla-inbound/rev/3dd3a6bdf339
Confirmed fixed URL + attachment 8468755 [details] against Mozilla/5.0 (Windows NT 6.1; WOW64; rv:34.0) Gecko/20100101 Firefox/34.0 ID:20140806210117 CSet: 1854d22e1d06
Thanks!
Comment 7•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Comment 9•11 years ago
|
||
Chris, when you have a second, please fill the uplift request! Thanks
Flags: needinfo?(cpearce)
| Assignee | ||
Comment 10•11 years ago
|
||
Comment on attachment 8468761 [details] [diff] [review]
Patch: Ensure we don't get a duplicate frame after seek
Approval Request Comment
[Feature/regressing bug #]: fastSeek, bug 778077
[User impact if declined]: Seeking an Ogg Theora video can result in a blank frame being painted, and the video being temporarily 0 sized.
[Describe test coverage new/current, TBPL]: We already have extensive seeking mochitests.
[Risks and why]: Seems low risk; we have test coverage.
[String/UUID change made/needed]: None.
Attachment #8468761 -
Flags: approval-mozilla-beta?
Attachment #8468761 -
Flags: approval-mozilla-aurora?
Flags: needinfo?(cpearce)
Updated•11 years ago
|
Attachment #8468761 -
Flags: approval-mozilla-beta?
Attachment #8468761 -
Flags: approval-mozilla-beta+
Attachment #8468761 -
Flags: approval-mozilla-aurora?
Attachment #8468761 -
Flags: approval-mozilla-aurora+
Comment 11•11 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/67b46a59bcc0
Needs rebasing for the beta uplift.
| Assignee | ||
Comment 12•11 years ago
|
||
Rebased on beta.
Attachment #8469605 -
Flags: feedback?(ryanvm)
Flags: needinfo?(cpearce)
Comment 13•11 years ago
|
||
Comment on attachment 8469605 [details] [diff] [review]
Beta Patch
LGTM, thanks :)
Attachment #8469605 -
Flags: feedback?(ryanvm) → feedback+
Comment 14•11 years ago
|
||
Keywords: branch-patch-needed
Comment 15•11 years ago
|
||
Reproduced in Firefox 31 RC under Win 7 64-bit.
Verified as fixed using Firefox 32 beta 6 (20140811180644) and latest Aurora 33.0a2 (20140811004001).
Keywords: verifyme
QA Contact: petruta.rasa
You need to log in
before you can comment on or make changes to this bug.
Description
•