Bug 1046003 - Ensure duplicate frames after a seek have an Image. r=kinetik, a=sledru